--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,22 @@ body{
 .heading-primary{
     color:#fff;
     text-transform: uppercase;
+
+    backface-visibility: hidden;
 }
 .heading-primary-main{
     display: block;
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+
+    animation-name: moveLeft;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+    /*
+    animation-iteration-count: 3;
+    animation-delay: 3s;
+    */
 }
 
 .heading-primary-sub{
@@ -57,10 +67,47 @@ body{
     font-size: 20px;
     font-weight:700;
     letter-spacing: 17.4px;
+
+    animation: moveRight 2s ease-out;
+    
 }
 .text-box{
     position: absolute;
     top:40%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+@keyframes moveLeft {
+    0%{
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+
+    70%{
+        opacity: 1;
+        transform: translateX(10px);
+    }    
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes moveRight {
+    0%{
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+
+    70%{
+        opacity: 1;
+        transform: translateX(-10px);
+    }    
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
