--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,23 @@ Dark green: #28b485
 
 */
 
-*{
+*,
+*::after,
+*::before{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
-
+html{
+    font-size: 62.5%;
+}
 body{
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    box-sizing: border-box;
     line-height: 1.7;
     color: #777;
-    padding: 30px;
+    padding: 3rem;
 }
 
 .header{
@@ -33,25 +37,25 @@ body{
 
 .logo-box{
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
 .logo{
-    height: 35px;
+    height: 3.5rem;
     
 }
 
 .heading-primary{
     color:#fff;
     text-transform: uppercase;
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
     backface-visibility: hidden;
 }
 .heading-primary-main{
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
 
     animation-name: moveLeft;
     animation-duration: 2s;
@@ -64,9 +68,9 @@ body{
 
 .heading-primary-sub{
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight:700;
-    letter-spacing: 17.4px;
+    letter-spacing: 1.75rem;
 
     animation: moveRight 2s ease-out;
     
@@ -82,13 +86,13 @@ body{
 @keyframes moveLeft {
     0%{
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translateX(-10rem);
     }
 
 
     70%{
         opacity: 1;
-        transform: translateX(10px);
+        transform: translateX(1rem);
     }    
     100%{
         opacity: 1;
@@ -99,13 +103,13 @@ body{
 @keyframes moveRight {
     0%{
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
 
 
     70%{
         opacity: 1;
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }    
     100%{
         opacity: 1;
@@ -116,7 +120,7 @@ body{
 @keyframes moveInBottom {
     0%{
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(3rem);
     }
  
     100%{
@@ -129,19 +133,20 @@ body{
 .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 100px;
+    border-radius: 10rem;
     transition: all .2s ;
     position: relative;
+    font-size: 1.6rem;
 }
 .btn:hover{
     transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0,0,0,.2);
+    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
 }
 .btn:active{
     transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 }
 .btn-white{
     background-color: #fff;
@@ -152,7 +157,7 @@ body{
     display: inline-block;
     height:100%;
     width:100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top: 0;
     left: 0;
