added & variables to css for nesting css

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@ $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-grey-dark: #777;
 $color-white: #fff;
+$color-black: #000;
 
 *,
 *::after,
@@ -31,55 +32,64 @@ body{
     background-position: top;
     position: relative;
     clip-path: polygon(0 0,100% 0,100%  75vh, 0 100%);
+
+    &__logo-box{
+        position: absolute;
+        top: 4rem;
+        left: 4rem;
+    }
+
+    &__logo{
+        height: 3.5rem;
+        
+    }
+
+    &__text-box{
+        position: absolute;
+        top:40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 }
 
-.header__logo-box{
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-}
-.header__logo{
-    height: 3.5rem;
-    
-}
+
+
 
 .heading-primary{
     color:$color-white;
     text-transform: uppercase;
     margin-bottom: 6rem;
     backface-visibility: hidden;
-}
-.heading-primary--main{
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
 
-    animation-name: moveLeft;
-    animation-duration: 2s;
-    animation-timing-function: ease-out;
-    /*
-    animation-iteration-count: 3;
-    animation-delay: 3s;
-    */
-}
 
-.heading-primary--sub{
-    display: block;
-    font-size: 2rem;
-    font-weight:700;
-    letter-spacing: 1.75rem;
-
-    animation: moveRight 2s ease-out;
+    &--main{
+        display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
     
+        animation-name: moveLeft;
+        animation-duration: 2s;
+        animation-timing-function: ease-out;
+        /*
+        animation-iteration-count: 3;
+        animation-delay: 3s;
+        */
+    }
+    
+    &--sub{
+        display: block;
+        font-size: 2rem;
+        font-weight:700;
+        letter-spacing: 1.75rem;
+    
+        animation: moveRight 2s ease-out;
+        
+    }
 }
-.header__text-box{
-    position: absolute;
-    top:40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
+
+
 
 @keyframes moveLeft {
     0%{
@@ -127,8 +137,9 @@ body{
     }
 }
 
-.btn:link,
-.btn:visited {
+.btn{
+    &:link,
+&:visited {
     text-transform: uppercase;
     text-decoration: none;
     padding: 1.5rem 4rem;
@@ -138,19 +149,27 @@ body{
     position: relative;
     font-size: 1.6rem;
 }
-.btn:hover{
+&:hover{
     transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+    box-shadow: 0 1rem 2rem rgba($color-black,.2);
+    &::after{
+        transform:scaleX(1.4) scaleY(1.6);
+        opacity: 0;
+    }
 }
-.btn:active{
+&:active{
     transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
+    box-shadow: 0 .5rem 1rem rgba($color-black,.2);
 }
-.btn--white{
+&--white{
     background-color: $color-white;
     color: $color-grey-dark;
+
+    &::after{
+        background-color: $color-white;
+    }
 }
-.btn::after{
+&::after{
     content: "";
     display: inline-block;
     height:100%;
@@ -162,14 +181,11 @@ body{
     z-index: -1;
     transition: all .4s;
 }
-.btn--white::after{
-    background-color: $color-white;
-}
-.btn:hover::after{
-    transform:scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-}
-.btn--animated{
+
+
+&--animated{
     animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
 }
+}
+
