added a grid, and grid variables, fixed float with clearfix

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,8 +10,9 @@
 @import "base/animations";
 @import "base/utilities";
 @import "base/typography";
-@import "layout/header";
 
+@import "layout/header";
+@import "layout/grid";
 
 
 
