added a card that switches faces on hover, did a nice gradient on hte back but the front is ugly

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
+@import "components/card";
 
 @import "pages/home";
 
@@ -15,6 +16,7 @@
 
 @import "layout/header";
 @import "layout/grid";
+
 
 
 
