--- a/sass/abstractions/_variables.scss
+++ b/sass/abstractions/_variables.scss
@@ -5,6 +5,12 @@ $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-terciary-light: #2998ff;
+$color-terciary-dark: #5643fa;
+
 $color-grey-light-1: #f7f7f7;
 
 //FONT
