--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -7,12 +7,12 @@
     
     &__side{
         
-        color:#fff;
-        font-size:2rem ;
+        
         //the height is on the card and side so it doesnt collapse
         height: 50rem;
         transition: all .5s ease;
         position: absolute;
+        overflow: hidden;
         top: 0;
         left: 0;
         width:100%;
@@ -34,10 +34,68 @@
     }
     //card:hover then to cardside
     &:hover &__side--front{
-        transform: rotateY(180deg);
+        transform: rotateY(-180deg);
     }
     &:hover &__side--back{
         transform: rotateY(0);
     }
+    //fron tside styling
+    &__picture{
+        background-size: cover;
+        height:23rem;
+        background-blend-mode: screen;
+        //so it works in all browsers
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        clip-path: polygon(0 0, 100% 0 , 100% 80%, 0 100% );
+        &--1{
+            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
+             url(../../img/nat-5.jpg);
+        }
+        &--2{
+            background-image: url(../img/nat-5.img);
+        }
+        &--3{
+            background-image: url(../img/nat-5.img);
+        }
+    }
+    &__heading{
+        font-size: 2.8rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        text-align: right;
+        color: $color-white;
+        position: absolute;
+        top: 12rem;
+        right:2rem;
+        width: 75%;
+    }
+    &__heading-span{
+        padding: 1rem 1.5rem;
+        //although the text is on two lines they are still treated as if they are one line so we use the box decoration break
+        -webkit-box-decoration-break: clone;
+        box-decoration-break: clone;
+        &--1{
+            background-image: linear-gradient(to right bottom, rgba($color-secondary-light, .85), rgba($color-secondary-dark, .85));
+        }
+    }
 
+    &__details{
+        padding:3rem;
+        ul{
+            list-style: none;
+            width: 80%;
+            margin: 0 auto;
+            //for block element inside block element
+            li{
+                text-align: center;
+                font-size: 1.5rem;
+                padding: 1 rem;
+
+                &:not(:last-child){
+                    border-bottom: 1px solid #eee;
+                }
+            }
+        }
+    }
 }
+
