added a background video to the testimonials section

--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
@@ -223,7 +223,9 @@
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
-    position: relative; }
+    position: relative;
+    backface-visibility: hidden;
+    overflow: hidden; }
   .story__img {
     height: 100%;
     transform: translateX(-4rem) scale(1.4);
@@ -250,6 +252,20 @@
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(80%); }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .15;
+  overflow: hidden; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
@@ -271,7 +287,7 @@
 
 .section-stories {
   padding: 15rem 0;
-  background-color: #f7f7f7; }
+  position: relative; }
 
 *,
 *::after,
