--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -2,13 +2,13 @@
     width: 75%;
     margin: 0 auto;
     box-shadow: 0 3rem 6rem rgba($color-black, .1);
-    background-color: $color-white;
+    background-color: rgba($color-white, .6);
     border-radius: 3px;
     padding: 6rem;
     padding-left: 9rem;
     font-size: $default-font-size;
     transform: skewX(-12deg);
-
+    
    
 
     &__shape{
@@ -22,7 +22,8 @@
         clip-path:circle(50% at 50% 50%) ;
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
-        
+        backface-visibility: hidden;
+        overflow: hidden;
     }
     &__img{
         height:100%;
