--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -3,7 +3,7 @@
     font-size: 1.5rem;
     padding: 2.5rem;
     text-align: center;
-    border-radius: 3px;
+    border-radius: $radius-corners;
     transition: transform .3s;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     &__icon{
