--- a/sass/abstractions/_variables.scss
+++ b/sass/abstractions/_variables.scss
@@ -12,6 +12,7 @@ $color-terciary-light: #2998ff;
 $color-terciary-dark: #5643fa;
 
 $color-grey-light-1: #f7f7f7;
+$color-grey-dark-2: #999;
 
 $radius-corners: 3px;
 
