--- a/sass/abstractions/_variables.scss
+++ b/sass/abstractions/_variables.scss
@@ -13,6 +13,7 @@ $color-terciary-dark: #5643fa;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
 
 $radius-corners: 3px;
 
