--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -11,6 +11,7 @@
         right: 6rem;
         border-radius: 50%;
         z-index: 2000;
+        box-shadow: 0 1rem 3rem rgba($color-black, .3) ;
     }
     &__background{
         z-index: 100;
@@ -22,16 +23,19 @@
         right: 6.5rem;
         background-image: radial-gradient($color-primary-light, $color-primary-dark);
         z-index:1500;
-
-        transform: scale(80);
+        transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+        //transform: scale(80);
     }
     &__nav{
         height:100vh;
-        width:100%;
+        width:0;
         position: fixed;
         top: 0;
-        right: 0;
+        left: 0;
         z-index:2000;
+
+        opacity: 0;
+        transition: all .8s;
     }
     &__list{
         position: absolute;
@@ -40,6 +44,7 @@
         transform: translate(-50%, -50%);
         list-style: none;
         text-align: center;
+        width: 100%;
     }
     &__item{
         margin: 3rem;
@@ -72,4 +77,13 @@
             transform: translateX(1rem);
         }
     }
+    &__checkbox:checked ~ &__background {
+        transform: scale(80);
+    }
+
+    &__checkbox:checked ~ &__nav {
+        opacity: 1;
+        width: 100%;
+    }
+
 }
