--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -7,6 +7,36 @@
     left: 0;
     background-color: rgba($color-black, .8) ;
     z-index: 9999;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+    //pseudo class for anchor tags
+    //Open states
+    &:target{
+        opacity: 1;
+        visibility: visible;
+    }
+    &:target &__content{
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+    &__close{
+        &:link,
+        &:visited{
+            color: $color-grey-dark;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 3rem;
+            text-decoration: none;
+            display: inline-block;
+            transition: all .2s;
+            line-height: 1;
+        }
+        &:hover{
+            color: $color-primary;
+        }
+    }
     &__content{
         @include absCenter;
         width: 75%;
@@ -15,6 +45,9 @@
         border-radius: $radius-corners;
         display: table;
         overflow: hidden;
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(.25);
+        transition: all .5s .2s;
     }
     &__left{
         width: 33.333333%;
