--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+/*
+0-600px:        Phone
+600 - 900:  Tablet Portrait
+900 - 1200:  Tablet landscape
+(1200-1800) is where our normal styles apply
+1800+: Desktop
+
+
+*/
+/*
+$breakpoint argument choices:
+-   phone
+- tab-port
+-tab-land
+- big-desktop
+*/
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -461,6 +477,18 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.29%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (max-width: 37.5em) {
+    html {
+      font-size: 30%; } }
+  @media (min-width: 112.5) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
