--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,13 +4,15 @@ body{
    
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
+    
 }
 .heading-primary{
     color:$color-white;
     text-transform: uppercase;
     margin-bottom: 6rem;
     backface-visibility: hidden;
+
+    
 
 
     &--main{
@@ -26,6 +28,10 @@ body{
         animation-iteration-count: 3;
         animation-delay: 3s;
         */
+        @include respond(phone){
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
     }
     
     &--sub{
@@ -35,7 +41,10 @@ body{
         letter-spacing: 1.75rem;
     
         animation: moveRight 2s ease-out;
-        
+        @include respond(phone){
+            letter-spacing: .5rem;
+
+        }
     }
 }
 
@@ -49,6 +58,13 @@ body{
     color:transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+    
+    @include respond(tab-port){
+        font-size: 3rem;
+    }
+    @include respond(phone){
+        font-size: 2.5rem;
+    }
 
     &:hover{
         transform: skewY(2deg) skewX(15deg) scale(1.1);
