--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,6 +4,10 @@
     font-size: 1.4rem;
     color: $color-grey-light-1;
 
+    @include respond(tab-port){
+       padding: 8rem 0;
+    }
+
      &__logo-box{
         //text-align works because image is inline block
         text-align: center;
@@ -17,6 +21,11 @@
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
         display: inline-block;
+        @include respond(tab-port){
+         width: 100%;
+         text-align: center;
+      }
+        
      }
      &__list{
         list-style: none;
@@ -51,5 +60,10 @@
         padding-top: 2rem;
         width: 80%;
         float: right;
+
+        @include respond(tab-port){
+         width: 100%;
+         float: none;
+      }
      }
 }
