--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -6,12 +6,20 @@
     border-radius: $radius-corners;
     transition: transform .3s;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+    @include respond(tab-port){
+        padding: 2rem;
+    }
     &__icon{
         font-size: 6rem;
         display: inline-block;
     background-image: linear-gradient((to right, $color-primary-light, $color-primary-dark));
     -webkit-background-clip: text;
     color:transparent;
+
+    @include respond(tab-port){
+        margin-bottom: 0;
+    }
     }
     &:hover{
         transform: translateY(-1.5rem) scale(1.03);
