--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,8 +1,12 @@
 .form{
     &__radio-group{
         width:49%;
-        
         display: inline-block;
+
+        @include respond(tab-port){
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
     &__radio-input{
         display: none;
@@ -62,6 +66,11 @@
         width:90%;
         display: block;
         transition: all .3s;
+
+        @include respond(tab-port){
+            width: 100%;
+            
+        }
         
         &:focus{
             outline: none;
