--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -8,6 +8,16 @@
     padding-left: 9rem;
     font-size: $default-font-size;
     transform: skewX(-12deg);
+
+    @include respond(tab-port){
+        width:100%;
+        padding: 4rem;
+        padding-left: 7rem;
+
+    }
+    @include respond(phone){
+        transform: skewX(0);
+    }
     
    
 
@@ -24,6 +34,10 @@
         position: relative;
         backface-visibility: hidden;
         overflow: hidden;
+
+        @include respond(phone){
+            transform: translateX(-3rem) skewX(0);
+        }
     }
     &__img{
         height:100%;
@@ -33,7 +47,10 @@
     }
     &__text{
         //we have to skew individually because shape already has ONE transform
-        transform: skewX(12deg)
+        transform: skewX(12deg);
+        @include respond(phone){
+            transform: skewX(0);
+        }
     }
     &__caption{
         position: absolute;
