--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,20 @@
 .header{
-    height: 95vh;
+    height: 85vh;
     background-image: linear-gradient(to right bottom,rgba($color-primary-light, 0.800), rgba($color-primary, 0.800)), url('../img/hero-small.jpg');
     background-size: cover;
     background-position: top;
     position: relative;
-    -webkit-clip-path: polygon(0 0,100% 0,100%  75vh, 0 100%);
+    
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)){
+        -webkit-clip-path: polygon(0 0,100% 0,100%  75vh, 0 100%);
     
     clip-path: polygon(0 0,100% 0,100%  75vh, 0 100%);
+    height: 95vh;
+    }
 
-    @media (min-resolution: 1921dpi) and (min-width:37.5em),(min-width:125em)
+    @media (min-resolution: 1921dpi) and (min-width:37.5em),
+    (-webkit-min-device-pixel-ratio: 2) and (min-width:37.5em),(min-width:125em)
    {
         background-image: linear-gradient(to right bottom,rgba($color-primary-light, 0.800), rgba($color-primary, 0.800)), url('../img/hero.jpg');
 
