--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -156,7 +156,8 @@
 
 
     
-    @include respond(tab-port){
+    @media only screen and (max-width: 56.25em),
+    only screen and (hover:none){
         height: auto;
         border-radius: $radius-corners;
         background-color: $color-white;
